# nnfs-cpp

./: .gitignore  CMakeLists.txt  README.md
apps/: main.cpp
include/activation/: activations.hpp
include/nn/: loss.hpp  network.hpp  types.hpp
src/nn/: network.cpp
